--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ sitemap:
 
 				<!-- Intro -->
 					<div id="intro">
-            <h1>{{site.title}}</h1>
+            <h1>Ezely</h1>
 						<h2>A Data Science Blog</h2>
 						
 						<ul class="actions">
@@ -61,10 +61,10 @@ sitemap:
                     </p>
 								</header>
 								<a href="#" class="image main"><img src="{{ "/images/pic01.jpg" | absolute_url }}" alt="" /></a>
-                <p>s
+                <p>
 								</p>
 								<p>
-									s
+								You can find out more about me in the "About" section, or take a look at my showcase projects in the "Blog" section. 
 								 </p>
 
 							</article>
