--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ sitemap:
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="#">Ezekiel Kuang</a></h2>
+									<h2><a href="#">Hi, I am Ezekiel Kuang</a></h2>
 									<p>Thanks for visiting my website!<br />
                     </p>
 								</header>
