--- a/index.html
+++ b/index.html
@@ -23,7 +23,25 @@ sitemap:
 	<body class="is-loading">
 
 		<!-- Wrapper -->
-			
+			<div id="wrapper" class="fade-in">
+
+				<!-- Intro -->
+					<div id="intro">
+            <h1>Ezely</h1>
+						<h2>A Data Science Blog</h2>
+						
+						<ul class="actions">
+							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
+						</ul>
+					</div>
+
+				<!-- Header -->
+					<header id="header">
+						<a href="{{ "/" | absolute_url }}" class="logo">{{site.title}}</a>
+					</header>
+
+				<!-- Nav -->
+					<nav id="nav">
 
             {% include nav.html %}
 
