--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@ sitemap:
 							<article class="post featured">
 								<header class="major">
 									<h2><a href="#">Hi, I am Ezekiel Kuang</a></h2>
-									<p>Thanks for visiting my website!<br />
+									<br />
                     </p>
 								</header>
-								<a href="#" class="image main"><img src="{{ "/images/pic01.jpg" | absolute_url }}" alt="" /></a>
+								
                 <p>
 								</p>
 								<p>
-								You can find out more about me in the "About" section, or take a look at my showcase projects in the "Blog" section. 
+								Equipped with knowledge in programming, data science and finance, I have a track record in applying my analytical strengths practically to solve business problems. A recent graduate of General Assembly's Data Science Immersive, I am driven by the prospect of transforming industries with the skills I have learnt.  
 								 </p>
 
 							</article>
