--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ sitemap:
 									<br />
                     </p>
 								</header>
-								
+								<a href="#" class="image main"><img src="{{ "/images/me.jpg" | absolute_url }}" alt="" /></a>
                 <p>
 								</p>
 								<p>
