--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@ sitemap:
                   {% if mod3 == 0 %}
                   <article>
   									<header>
-  										<h2><a href="#">Sponsored</h2>
+  										<h2><a href="#">Other Projects</h2>
+  											<p>Jump to my Github page for more projects
+  												<a href="https://github.com/ekbq/Projects" class="icon fa-github" rel="nofollow"><span class="label">GitHub</span></a>
   									</header>
 
   								</article>
