--- a/index.html
+++ b/index.html
@@ -54,11 +54,14 @@ sitemap:
 									<br />
                     </p>
 								</header>
-								<a href="#" class="image main"><img src="{{ "/images/me.jpg" | absolute_url }}" alt="" /></a>
+								
                 <p>
 								</p>
 								<p>
 								Equipped with knowledge in programming, data science and finance, I have a track record in applying my analytical strengths practically to solve business problems. A recent graduate of General Assembly's Data Science Immersive, I am driven by the prospect of transforming industries with the skills I have learnt.  
+								 </p>
+								 <p>
+								A highlight of my projects done so far can be found below and in the "Blog" section. For more projects, you can go to my Github page <a href="https://github.com/ekbq/Projects">here</a>.  
 								 </p>
 
 							</article>
